--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
 				<li><a class="smoothscroll" href="#about" title="">About</a></li>
-				<li><a class="smoothscroll" href="#services" title="">Services / Process</a></li>
 				<li><a class="smoothscroll" href="#portfolio" title="">Works</a></li>
+				<li><a class="smoothscroll" href="#services" title="">Services / Process</a></li>
 				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>						
 			</ul>	
 
@@ -150,7 +150,8 @@
 
 				<div class="intro">
 					<h3 class="animate-this">About Us</h3>
-	   			<p class=" animate-this"><span>G FINA STUDIO.</span> Industrial Designer graduated from FADU UBA. The University of Architecture, Design and Urbanism is part of the University of Buenos Aires. This is an independent industrial design studio, which is based on the values ​​of innovation, development, the sustainability of the chosen materials, and the combination of vintage and futuristic design. Passionate, efficient and creative industrial designer. Experience in PRODUCT DEVELOPMENT. I make sure that each project I work on has an INNOVATIVE and oustanding distinction. Taking care of their functionality, communication, their interaction with the final user and industrial process.
+	   			<p class=" animate-this"><span>G FINA STUDIO.</span>  Passionate, efficient and creative Industrial Designer graduated from the University of Architecture, Design and Urbanism of the University of Buenos Aires. This is an independent industrial design studio, which is based on the values ​​of innovation, conscious development, the sustainability of the chosen materials and the combination of vintage and futuristic design. 
+					We are experts in product develoment, taking care of their functionality, communication, their interaction with the final user and industrial process.
 				 <br>	A project by Anita Dalbene.</p>	
 				</div>   
 				<br>
