--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 			</ul>
 
 			<p class="sponsor-text">
-				Welcome to Gata Fina Studio<a></a>.
-				<span></span> <span></span>.
+				<a>Welcome to Gata Fina Studio</a><br>
+				<span>Get ready <br> Start creating together.</span><span></span>.
 				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
 			</p>
 
@@ -469,8 +469,9 @@
 				</div> <!-- end services-list -->
 
 			</div> <!-- end services-content -->
-		</section>
 
+			
+		</section>
 
 		<section id="services">
 
@@ -590,15 +591,11 @@
 
 		</section> <!-- end services -->
 
-
 		<!-- about
    ================================================== -->
 
-
-
-
-
-		<!-- Testimonials Section
+ 
+	<!-- Testimonials Section
    ================================================== -->
 		<section id="testimonials">
 
@@ -750,7 +747,7 @@
 							<textarea name="message" id="contactMessage" placeholder="message" rows="10" cols="50"
 								required=""></textarea>
 						</div>
-						<input type="submit" class="submitform" id="button" value="Send Message">
+						<input type="submit" class="submitform"  id="button" value="Send Message"  >
 
 					</form> <!-- end form -->
 					<script type="text/javascript"
@@ -803,6 +800,7 @@
 		<!-- footer
    ================================================== -->
 		<footer>
+
 			<div class="footer-main">
 
 				<div class="row">
@@ -823,10 +821,11 @@
 						<h4 class="h05">Follow Us.</h4>
 
 						<ul class="list-links">
-							<li><a href="https://au.linkedin.com/in/dalbeneanita/es" target="_blank">Linkedin</a></li>
-							<li><a href="https://www.upwork.com/freelancers/~0146f0ce935608b584"
-									target="_blank">UpWork</a></li>
-							<li><a href="https://www.behance.net/anitadalbene" target="_blank">Behance</a></li>
+							<li><a href="https://au.linkedin.com/in/dalbeneanita/es" target="_blank" 
+								class="fa fa-linkedin"> Linkedin</a></li>
+							<li><a href="https://www.upwork.com/freelancers/~0146f0ce935608b584"  target="_blank">
+								<iconify-icon icon="simple-icons:upwork"></iconify-icon> UpWork</a></li>
+							<li><a href="https://www.behance.net/anitadalbene" target="_blank" class="fa fa-behance"> Behance</a></li>
 
 						</ul>
 
