--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div class="col-twelve">
 
 						<h3 class="animate-intro">G Fina Studio</h3>
-						<h3 class="animate-intro">Industrial Designeer</h3>
+						<h3 class="animate-intro">Industrial Designer</h3>
 						<h1 class="animate-intro">
 							Bring Your Ideas <br>
 							To Life.
